Moved stuff from Old repository

--- a/HW_sept_12.html
+++ b/HW_sept_12.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-<title>My Cs 121 Repository</title>
+<title>HOmework Sept 12</title>
 
 <style type="text/css">
 body, td {
@@ -141,11 +141,54 @@ hr {
 </head>
 
 <body>
-<h1>My Cs 121 Repository</h1>
+<h1>HOmework Sept 12</h1>
 
-<p>work goes here</p>
+<p>#CountOdds Function</p>
 
-<p>hello world &lt;3</p>
+<blockquote>
+<p>countOdds &lt;- function(x) {</p>
+
+<ul>
+<li>k&lt;-0</li>
+<li>for(n in x) {</li>
+<li>if (n%%2==1)k&lt;-k+1</li>
+<li>  }</li>
+<li>k</li>
+<li>}</li>
+</ul>
+</blockquote>
+
+<p>#CountEvens Function
+countEvens &lt;-function(x) {</p>
+
+<ul>
+<li>y &lt;-0</li>
+<li>for (n in x) {</li>
+<li>  if(n%%2==0)y &lt;-y+1</li>
+<li>}</li>
+<li>y</li>
+<li>}</li>
+</ul>
+
+<p>#HypotenuseLength Function
+hypotenuseLength &lt;-function(x,y) {</p>
+
+<ul>
+<li> k &lt;-(x<sup>2)+(y<sup>2)</sup></sup></li>
+<li>k &lt;-sqrt(k)</li>
+<li>k</li>
+<li>}</li>
+</ul>
+
+<p>#lawofcosines Function
+lawofcosines &lt;-function(x,y,z) {</p>
+
+<ul>
+<li>k &lt;-(x<sup>2)+(y<sup>2)-2<em>x*y</em>(cos(z))</sup></sup></li>
+<li>k &lt;-sqrt(k)</li>
+<li>k</li>
+<li>}</li>
+</ul>
 
 </body>
 
